services/stirling-pdf/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Stirling-PDF
    gethomepage.dev/description: Suite de manipulación de PDFs
    gethomepage.dev/group: Aplicaciones
    gethomepage.dev/icon: stirling-pdf.png
    gethomepage.dev/href: https://stirling.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - stirling.bonchan.org
  rules:
    - backendRefs:
        - name: stirling-pdf
          port: 8080
